--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,24 @@
  *= require_tree .
  *= require_self
  */
+/* /* add my personnal css style like this : */
+
+body {
+  background-color: #000;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+}
+
+a {
+  color: #00B7FF;
+}
+
+a:hover {
+  color: #00B7FF;
+  text-decoration: none;
+}
+
+form {
+  margin: 0;
+  padding: 0;
+}
